<resources>
    <string name="app_name">MVVM</string>
    <string name="title_home">Homepage</string>
    <string name="title_browse">Browse</string>
    <string name="title_coming_soon">Coming Soon</string>
    <string name="title_saved">Saved</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error">Error</string>
    <string name="success">Success</string>
    <string name="room_database_demo">Room Database Demo</string>
    <string name="enter_name">Enter Name</string>
    <string name="save_user">Save User</string>
    <string name="name">Name:</string>
    <string name="age">Age:</string>
    <string name="remote_source_demo">Remote Source Demo</string>
    <string name="no_data_found">No Data Found</string>
</resources>