<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.mvvm.presentation.ui.homePage.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_browse"
        android:name="com.example.mvvm.presentation.ui.browse.BrowseFragment"
        android:label="@string/title_browse"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_coming_soon"
        android:name="com.example.mvvm.presentation.ui.comingsoon.ComingSoonFragment"
        android:label="@string/title_coming_soon"
        tools:layout="@layout/fragment_coming_soon" />

    <fragment
        android:id="@+id/navigation_saved"
        android:name="com.example.mvvm.presentation.ui.saved.SavedFragment"
        android:label="@string/title_saved"
        tools:layout="@layout/fragment_saved" />
</navigation>