<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".presentation.ui.browse.BrowseFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp">


        <TextView
            android:id="@+id/tvHeading"
            style="@style/HeadingFornato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/room_database_demo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/inLayoutName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@id/tvHeading">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/edName"
                android:layout_height="match_parent"
                android:textAppearance="@style/regularTextStyle"
                android:hint="@string/enter_name">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/inLayoutAge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@id/inLayoutName">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:id="@+id/edAge"
                android:inputType="number"
                android:textAppearance="@style/regularTextStyle"
                android:layout_height="match_parent"
                android:hint="Enter Your Age">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/inLayoutDesignation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/_45sdp"
            app:layout_constraintTop_toBottomOf="@id/inLayoutAge">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox"
                android:layout_width="match_parent"
                android:inputType="text"
                android:id="@+id/edDesignation"
                android:textAppearance="@style/regularTextStyle"
                android:layout_height="match_parent"
                android:hint="Enter Your Designation">

            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSaveUser"
            android:layout_marginTop="@dimen/_30sdp"
            android:minHeight="@dimen/_45sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inLayoutDesignation"
            android:layout_width="wrap_content"
            style="@style/regularTextStyle"
            android:text="@string/save_user"
            android:backgroundTint="@color/white"
            android:layout_height="wrap_content"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewListUser"
            android:layout_marginTop="@dimen/_20sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSaveUser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </androidx.recyclerview.widget.RecyclerView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>